--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- here is image coursal -->
     <div class="container-fluid p-0 mt-2">
         <div class="row g-0">
-            <div class="col-8">
+            <div class="col-lg-8 col-md-8 col-sm-12">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -116,7 +116,7 @@
                     </button>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-4 col-sm-12 text-center mb-3 mb-lg-0">
                 <h4 class="pt-2 pb-2" style="background-color: #ffa200;
                 color: white; text-align: center;">What's New</h4>
                 <marquee class="mx-3" direction="up" height="320px" scrollamount="3" onmouseover="this.stop();"
@@ -146,7 +146,8 @@
                 Notice
             </div>
             <div class="col-10 p-0">
-                <marquee behavior="" direction="right"><a href="#" style="text-decoration: none; color: darkred;"><i
+                <marquee behavior="" direction="right" onmouseover="this.stop();"
+                    onmouseout="this.start();"><a href="#" style="text-decoration: none; color: darkred;"><i
                             class="fa-solid fa-arrows-turn-right mt-3"></i>|| 75% students get scholarships from state
                         Govt. under various head like, Poshak Yojana, SC/ST/OBC fellowship. ||<i
                             class="fa-solid fa-sparkles"></i></a></marquee>
@@ -155,13 +156,13 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col " style="text-align: center;">
+            <div class="col mt-4" style="text-align: center;">
                 <h2 style="font-weight: bold;font-size: 1.7rem;"><span style="color: #8b0000;">WELCOME</span> TO BADRI
                     NARAYAN MUKTESHWAR COLLEGE</h2>
             </div>
             <div class="row my-4"
                 style="text-align: justify; font-size: 0.9rem; padding-left: 10%; padding-right: 10%;">
-                <div class="col-8">
+                <div class="col-lg-8 col-md-8 col-sm-12">
                     <p>Badri Narayan Mukteshwar College, Barhiya is the oldest institute of higher learning in the
                         Lakhisarai district. Late Badri Narayan Mukteshwar had a dream to open a higher learning
                         institute for the students of rural area. B.N.M College, Barhiya believes in providing quality
@@ -174,8 +175,8 @@
                         the B.N.M.College, Barhiya is to stimulate and coordinate the institutional resources of the
                         College and to challenge faculties and students.</p>
                 </div>
-                <div class="col-4">
-                    <img src="image/image3.png" class="img-fluid ms-2" alt="..." style="height:35vh">
+                <div class="col-lg-4 col-md-4 col-sm-12 text-center mb-3 mb-lg-0">
+                    <img src="image/image3.png" class="img-fluid ms-2" alt="..." style="height:35vh; width: 100%;">
                 </div>
             </div>
 
@@ -226,25 +227,26 @@
                 <h2 style="font-weight: bold;font-size: 1.7rem;"><span style="color: #8b0000;">PRINCIPAL'S </span>
                     MESSAGE</h2>
             </div>
-            <div class="row mt-4 p-4" style="background-color: #8b0000;">
-                <div class="col-3 d-flex justify-content-center align-items-center">
-                    <img src="image/m4.png" class="img-fluid ms-2" alt="..." style="height:45vh">
+            <div class="row mt-4 p-4 d-flex justify-content-center align-items-center principal-section" style="background-color: #8b0000;">
+                <div class="col-lg-3 col-md-4 col-sm-12 text-center mb-3 mb-lg-0">
+                    <img src="image/m4.png" class="img-fluid" style="height:45vh; ">
                 </div>
-                <div class="col-9">
+                <div class="col-lg-9 col-md-8 col-sm-12">
                     <p style="color:#fdfdfd">It’s a pleasure to be a professor in charge and Principal of an educational
                         institute of a very remote sensitive area BADRI NARAYAN MUKTESHWAR COLLEGE BARHIYA. A dream come
                         true of the visionary Late Badri Narayan to enhance the quality of higher education of the rural
                         society, particularly of the traditional girls/women of this remote area. One of the oldest
-                        higher educational institutions of old Munger District. <br> <br><br><br>
-
+                        higher educational institutions of old Munger District. <br><br>
 
                         Any young person taking admission in this premier institution must not only have the required
                         marks, but must aim at excellence in whatever he or she attempts, all the time keeping in mind
                         and in practice, a disciplined and a diligent attitude. I welcome the prospective students of
                         B.N.M College to its campus, to benefit from its rich academic tradition so that they may step
                         out into the world as worthy citizens of our country.</p>
-                    <h3 style="color: white;">Dr. Ashutosh Kumar</h3>
-                    <h5 style="color: white;">Principal, BNM College</h5>
+                    <div class="text-center text-lg-start mt-3">
+                        <h3 style="color: white;">Dr. Ashutosh Kumar</h3>
+                        <h5 style="color: white;">Principal, BNM College</h5>
+                    </div>
                 </div>
             </div>
         </div>
