--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         </div>
     </div>
     <!-- here is image coursal end-->
+     <!-- notice board section start --> 
     <div class="container-fluid" style=" border-bottom:2px dashed #8b0000;border-top:2px dashed darkred; ">
         <div class="row">
             <div class="col-2 bg-danger p-2 ps-4" style="color:white; font-weight: bold;">
@@ -154,6 +155,8 @@
             </div>
         </div>
     </div>
+     <!-- notice board section start end--> 
+    <!-- here is college welcome section start -->
     <div class="container-fluid">
         <div class="row">
             <div class="col mt-4" style="text-align: center;">
@@ -182,6 +185,8 @@
 
         </div>
     </div>
+      <!-- here is college welcome section  end -->
+    <!-- mentors section here start -->
     <div class="container">
         <div class="col " style="text-align: center;">
             <h2 style="font-weight: bold;font-size: 1.7rem;"><span style="color: #8b0000;">OUR</span> MENTORS</h2>
@@ -189,19 +194,19 @@
         <div class="row">
             <div class="col d-flex flex-wrap justify-content-center">
                 <div class="album-image">
-                    <img src="image/m1.jpeg" data-aos="fade-left" alt="img1" class="img-fluid aos-init aos-animate"
+                    <img src="image/m1.jpeg" data-aos="fade-left" alt="img1" class="img-fluid"
                         style="box-shadow: 5px 5px 10px grey; width:190px;height:210px;">
                     <h4><a href="" style="color:darkred;font-size: 18px;">Shri Arif Mohammed Khan</a></h4>
                     <p>Hon'ble Governor<br>Bihar</p>
                 </div>
                 <div class="album-image">
-                    <img src="image/m2.jpg" data-aos="fade-left" alt="img1" class="img-fluid aos-init aos-animate"
+                    <img src="image/m2.jpg" data-aos="fade-left" alt="img1" class="img-fluid"
                         style="box-shadow: 5px 5px 10px grey; width:190px;height:210px;">
                     <h4><a href="" style="color:darkred;font-size: 18px;">Shri Nitish Kumar</a></h4>
                     <p>Hon'ble Chief Minister<br>Bihar</p>
                 </div>
                 <div class="album-image">
-                    <img src="image/m3.jpg" data-aos="fade-left" alt="img1" class="img-fluid aos-init aos-animate"
+                    <img src="image/m3.jpg" data-aos="fade-left" alt="img1" class="img-fluid"
                         style="box-shadow: 5px 5px 10px grey; width:190px;height:210px;">
                     <h4><a href="" style="color:darkred;font-size: 18px;">Prof. (Dr.) Sanjoy Kumar</a></h4>
                     <p>Hon'ble Vice Chancellor
@@ -209,7 +214,7 @@
                     </p>
                 </div>
                 <div class="album-image">
-                    <img src="image/m4.png" data-aos="fade-left" alt="img1" class="img-fluid aos-init aos-animate"
+                    <img src="image/m4.png" data-aos="fade-left" alt="img1" class="img-fluid"
                         style="box-shadow: 5px 5px 10px grey; width:190px;height:210px;">
                     <h4><a href="" style="color:darkred;font-size: 18px;">Dr. Ashutosh Kumar
                         </a></h4>
@@ -221,6 +226,8 @@
         </div>
 
     </div>
+     <!-- mentors section here start  end-->
+    <!-- principal message section here start -->
     <div class="container-fluid">
         <div class="row">
             <div class="col " style="text-align: center;">
@@ -251,6 +258,33 @@
             </div>
         </div>
     </div>
+       <!-- principal message section here start end -->
+        <!-- our association section start -->
+          <div class="container">
+        <div class="col " style="text-align: center;">
+            <h2 style="font-weight: bold;font-size: 1.7rem;"><span style="color: #8b0000;">Our </span> Associations</h2>
+        </div>
+        <div class="row">
+            <div class="col d-flex flex-wrap justify-content-center">
+                 <div class="col-12">
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="image/image.png" style="width: 377px; margin-right: 120px;" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="image/image2.png" style="width: 377px; margin-right: 120px;" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="image/image3.png" style="width: 377px; margin-right: 120px;" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- our association section end -->
     <script src="js/bootstrap5.bundle.min.js"></script>
 </body>
 
